Tests/Fail/Test056.ML
(* Structure tests. *)
structure S: sig type t end = struct end;
